# myadmin

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
myadmin/: forms.py  graphs.py  models.py  query.py  urls.py  views.py
myadmin/migrations/: 0001_initial.py
myadmin/templates/myadmin/: app_model.html  base.html  home.html  profile_change.html  user_model.html
myadmin/templates/myadmin/tag/: model.html
myadmin/templatetags/: app_model.py  myadmin.py
system/: settings.py  urls.py
