[metadata]
name = myadmin
version = 0.1
description = A Django application is for monitoring Users activities in a django project
long_description = file: README.md
author = Immanuel Njuguna
author_email = njugunaimmanuel1@outlook.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref>=3.7.2
    bokeh>=3.2.2
    certifi>=2023.7.22
    cffi>=1.15.1
    charset-normalizer>=3.2.0
    contourpy>=1.1.0
    cryptography>=41.0.3
    Deprecated>=1.2.14
    Django>=4.2.4
    django-cleanup>=8.0.0
    django-cors-headers>=4.2.0
    django-environ>=0.11.2
    djangorestframework>=3.14.0
    djangorestframework-simplejwt>=5.3.0
    idna>=3.4
    Jinja2>=3.1.2
    jwcrypto>=1.5.0
    MarkupSafe>=2.1.3
    myauth @ git+https://github.com/Immanuel-supanova/myauth.git@9433bf44517cb3c5fa836cf2d108f18e1d6d59ef
    numpy>=1.25.2
    packaging>=23.1
    pandas>=2.1.0
    Pillow>=10.0.0
    pycparser>=2.21
    PyJWT>=2.8.0
    python-dateutil>=2.8.2
    pytz>=2023.3
    PyYAML>=6.0.1
    requests>=2.31.0
    six>=1.16.0
    sqlparse>=0.4.4
    tornado>=6.3.3
    tzdata>=2023.3
    urllib3>=2.0.4
    wrapt>=1.15.0
    xyzservices>=2023.7.0
