[metadata]
name = myadmin
version = 0.1
description = A Django application is for monitoring Users activities in a django project
long_description = file: README.md
author = Immanuel Njuguna
author_email = njugunaimmanuel1@outlook.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref>=3.7.2
    bokeh>=3.2.2
    contourpy>=1.1.0
    Django>=4.2.5
    Jinja2>=3.1.2
    MarkupSafe>=2.1.3
    numpy>=1.25.2
    packaging>=23.1
    pandas>=2.1.0
    Pillow>=10.0.0
    python-dateutil>=2.8.2
    pytz>=2023.3.post1
    PyYAML>=6.0.1
    six>=1.16.0
    sqlparse>=0.4.4
    tornado>=6.3.3
    tzdata>=2023.3
    xyzservices>=2023.7.0
